--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,12 @@
 
 <body>
 
+
+
+<h1> Welcome to the Glasgow Science Centre! </h1>
+<h3> Aiming to make science accessible to all </h3>
+
+
 #323046
 
 
