--- a/landing.html
+++ b/landing.html
@@ -16,6 +16,19 @@
 <h1> Welcome to the Glasgow Science Centre! </h1>
 <h3> Aiming to make science accessible to all </h3>
 
+  <div class="dropdown show">
+  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    I have a...
+  </a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <a class="dropdown-item" href="#">visual impairment</a>
+    <a class="dropdown-item" href="#">hearing impairment</a>
+    <a class="dropdown-item" href="#">physical impairment</a>
+    <a class="dropdown-item" href="#">autism</a>
+    <a class="dropdown-item" href="#">epilepsy</a>
+  </div>
+</div>
 
 #323046
 
