pages for autism and epilepsy

--- a/landing.html
+++ b/landing.html
@@ -18,15 +18,15 @@
 
   <div class="dropdown show">
   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    I have a...
+    I have a:
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="#">visual impairment</a>
-    <a class="dropdown-item" href="#">hearing impairment</a>
-    <a class="dropdown-item" href="#">physical impairment</a>
-    <a class="dropdown-item" href="#">autism</a>
-    <a class="dropdown-item" href="#">epilepsy</a>
+    <a class="dropdown-item" href="#">Visual impairment</a>
+    <a class="dropdown-item" href="#">Hearing impairment</a>
+    <a class="dropdown-item" href="#">Physical impairment</a>
+    <a class="dropdown-item" href="#">Autism</a>
+    <a class="dropdown-item" href="#">Epilepsy</a>
   </div>
 </div>
 
