--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -22,13 +22,19 @@
   </a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="#">Visual impairment</a>
-    <a class="dropdown-item" href="#">Hearing impairment</a>
-    <a class="dropdown-item" href="#">Physical impairment</a>
-    <a class="dropdown-item" href="#">Autism</a>
-    <a class="dropdown-item" href="#">Epilepsy</a>
+    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/visual.html">Visual impairment</a>
+    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/hearing.html">Hearing impairment</a>
+    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/physical.html">Physical impairment</a>
+    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/autism.html">Autism</a>
+    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/epilepsy.html">Epilepsy</a>
   </div>
 </div>
+
+
+
+
+
+
 
 #323046
 
