--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"></link>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -16,21 +19,29 @@
 <h1> Welcome to the Glasgow Science Centre! </h1>
 <h3> Aiming to make science accessible to all </h3>
 
-<div class="dropdown show">
-  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    I have a:
-  </a>
-
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/visual.html">Visual impairment</a>
-    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/hearing.html">Hearing impairment</a>
-    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/physical.html">Physical impairment</a>
-    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/autism.html">Autism</a>
-    <a class="dropdown-item" href="https://github.com/Glasgow19/team-4/blob/master/Webpage/epilepsy.html">Epilepsy</a>
-  </div>
-</div>
 
 #323046
+
+<!--<div align="center">-->
+<div class="dropdown" >
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">I have a:
+  <span class="caret"></span>
+  </button>
+
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="visual.html">Visual impairment</a></li>
+    <li><a class="dropdown-item" href="hearing.html">Hearing impairment</a></li>
+    <li><a class="dropdown-item" href="physical.html">Physical impairment</a></li>
+    <li><a class="dropdown-item" href="autism.html">Autism</a></li>
+    <li><a class="dropdown-item" href="epilepsy.html">Epilepsy</a></li>
+  </ul>
+
+</div>
+</div>
+
+
+
+
 
 </body>
 
