--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -21,7 +21,24 @@
 
 
 #323046
-
+  
+  <nav>
+  <ul id="main">
+    <li>Adapt for:
+      <ul class="drop">
+        <div>
+        <li>Visual impairment</li>
+        <li>Hearing impairment</li>
+        <li>Physical impairment</li>
+        <li>Autism</li>
+          <li>Epilepsy</li>
+        </div>
+      </ul>
+    </li>
+    <div id="marker"></div>
+  </ul>
+</nav>
+  
 <!--<div align="center">-->
 <div class="dropdown" >
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">I have a:
