--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -2,59 +2,91 @@
 <html>
 <head>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="landing.css">
 
 </head>
 
 <body>
 
+<div class="topbar">
+<h1 class="topbar"> </h1>
+</div>
 
 
-<h1> Welcome to the Glasgow Science Centre! </h1>
-<h3> Aiming to make science accessible to all </h3>
-
-
-#323046
-  
-  <nav>
-  <ul id="main">
-    <li>Adapt for:
-      <ul class="drop">
-        <div>
-        <li>Visual impairment</li>
-        <li>Hearing impairment</li>
-        <li>Physical impairment</li>
-        <li>Autism</li>
-          <li>Epilepsy</li>
-        </div>
-      </ul>
-    </li>
-    <div id="marker"></div>
-  </ul>
-</nav>
-  
-<!--<div align="center">-->
-<div class="dropdown" >
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">I have a:
-  <span class="caret"></span>
-  </button>
-
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="visual.html">Visual impairment</a></li>
-    <li><a class="dropdown-item" href="hearing.html">Hearing impairment</a></li>
-    <li><a class="dropdown-item" href="physical.html">Physical impairment</a></li>
-    <li><a class="dropdown-item" href="autism.html">Autism</a></li>
-    <li><a class="dropdown-item" href="epilepsy.html">Epilepsy</a></li>
-  </ul>
-
+<div class="flex-rectangle">
+<div class="col-sm-4">
+<img src="GSC_FULL-COLOUR.png" style="width:50%;float:left;">
+</div>
+<div class="col-sm-8">
+  <h3 style="color:white;"> Welcome to the Glasgow Science Centre! </h3>
 </div>
 </div>
+
+
+
+<h5 id="header" style="color:white;"> Aiming to make science accessible to all </h5>
+
+<div class="main_body">
+<!--#323046-->
+
+
+
+
+<div class="col-sm-12">
+<br>
+<br>
+
+<div class="col-sm-8">
+
+<div aling="center"> 
+<h4> Plan your visit </h4>
+<div class="dropdown">
+  <button class="dropbtn">Adapt for</button>
+  <div class="dropdown-content">
+    <a class="dropdown-item" href="visual.html">Visual impairment</a>
+    <a class="dropdown-item" href="hearing.html">Hearing impairment</a>
+    <a class="dropdown-item" href="physical.html">Physical impairment</a>
+    <a class="dropdown-item" href="autism.html">Autism</a>
+    <a class="dropdown-item" href="epilepsy.html">Epilepsy</a>
+  </div>
+</div>
+</div>
+
+</div>
+
+
+
+<div class="col-sm-4">
+  <img src="map_of_museum.png" style="width: 75%;border-radius: 50%;">
+</div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
 
 
 
