changing dropdown width

--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -42,10 +42,10 @@
 <br>
 <br>
 
-<div class="col-sm-8">
+<div class="col-sm-7">
 
-<div aling="center"> 
-<h4> Plan your visit </h4>
+<div aling="center" style="float:center;text-align:center;">
+<h4 style="text-align:center;"> Plan your visit </h4>
 <div class="dropdown">
   <button class="dropbtn">Adapt for</button>
   <div class="dropdown-content">
@@ -62,7 +62,7 @@
 
 
 
-<div class="col-sm-4">
+<div class="col-sm-5">
   <img src="map_of_museum.png" style="width: 75%;border-radius: 50%;">
 </div>
 
@@ -71,6 +71,14 @@
 
 
 </div>
+
+
+
+
+<br>
+<br>
+<br>
+<br>
 
 
 
