--- a/Webpage/visual.html
+++ b/Webpage/visual.html
@@ -10,21 +10,9 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="landing.html">Glasgow Science Centre</a></div>
+				<div class="logo"><a href="landing.html">Home</a></div>
 				<a href="#menu">Menu</a>
 			</header>
-
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="landing.html">Home</a></li>
-					<li><a href="hearing.html">Hearing Impairment</i></a></li>
-					<li><a href="visual.html">Visual Impairment</i></a></li>
-					<li><a href="physical.html">Physical Impairment</a></li>
-					<li><a href="autism.html">Autistic</a></li>
-					<li><a href="epilepsy.html">Epileptic</a></li>
-				</ul>
-			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
@@ -47,7 +35,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+											<a class="link"><img src="images/pic01.jpg" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
