cleaning up files

--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -14,93 +15,144 @@
 
 <body>
 
-<div class="topbar">
-<h1 class="topbar"> </h1>
-</div>
 
+
+<!--#323046-->
 
 <div class="flex-rectangle">
 <div class="col-sm-4">
 <img src="GSC_FULL-COLOUR.png" style="width:50%;float:left;">
 </div>
 <div class="col-sm-8">
-  <h3 style="color:white;"> Welcome to the Glasgow Science Centre! </h3>
+<h3 style="color:white;"> Welcome to the Glasgow Science Centre! </h3>
 </div>
 </div>
 
 
 
-<h5 id="header" style="color:white;"> Aiming to make science accessible to all </h5>
 
-<div class="main_body">
-<!--#323046-->
+		<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					<header>
+						<h1>Glasgow Science Centre</h1>
+						<p>Aiming to make science accessible to everyone.</p>
+					</header>
+					<a href="#main" class="button big scrolly">I have a visual impairment</a>
+				</div>
+			</section>
 
+		<!-- Main -->
+			<div id="main">
 
-
-
-<div class="col-sm-12">
-<br>
-<br>
-
-<div class="col-sm-7">
-
-<div aling="center" style="float:center;text-align:center;">
-<h4 style="text-align:center;"> Plan your visit </h4>
-<div class="dropdown">
-  <button class="dropbtn">Adapt for</button>
-  <div class="dropdown-content">
-    <a class="dropdown-item" href="visual.html">Visual impairment</a>
-    <a class="dropdown-item" href="hearing.html">Hearing impairment</a>
-    <a class="dropdown-item" href="physical.html">Physical impairment</a>
-    <a class="dropdown-item" href="autism.html">Autism</a>
-    <a class="dropdown-item" href="epilepsy.html">Epilepsy</a>
-  </div>
-</div>
-</div>
-
-</div>
+				<!-- Section -->
+					<section class="wrapper style1">
+						<div class="inner">
+							<!-- 2 Columns -->
+								<div class="flex flex-2">
+									<div class="col col1">
+										<div class="image round fit">
+											<a class="link"><img src="map_of_museum.png" alt="" /></a>
+										</div>
+									</div>
+									<div class="col col2">
 
 
+                    <div aling="center" style="float:center;text-align:center;">
+                    <h4 style="text-align:center;"> Plan your visit </h4>
+                    <div class="dropdown">
+                      <button class="dropbtn">Adapt for</button>
+                      <div class="dropdown-content">
+                        <a class="dropdown-item" href="visual.html">Visual impairment</a>
+                        <a class="dropdown-item" href="hearing.html">Hearing impairment</a>
+                        <a class="dropdown-item" href="physical.html">Physical impairment</a>
+                        <a class="dropdown-item" href="autism.html">Autism</a>
+                        <a class="dropdown-item" href="epilepsy.html">Epilepsy</a>
+                      </div>
 
-<div class="col-sm-5">
-  <img src="map_of_museum.png" style="width: 75%;border-radius: 50%;">
-</div>
+                    </div>
 
+                    </div>
 
+									</div>
+								</div>
+						</div>
+					</section>
 
+				<!-- Section -->
+					<section class="wrapper style2">
+						<div class="inner">
+							<div class="flex flex-2">
+								<div class="col col2">
+									<h3>Suspendisse quis massa vel justo</h3>
+									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
+									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+								</div>
+								<div class="col col1 first">
+									<div class="image round fit">
+										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
 
+				<!-- Section -->
+					<section class="wrapper style1">
+						<div class="inner">
+							<header class="align-center">
+								<h2>Aliquam ipsum purus dolor</h2>
+								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
+							</header>
+							<div class="flex flex-3">
+								<div class="col align-center">
+									<div class="image round fit">
+										<img src="images/pic03.jpg" alt="" />
+									</div>
+									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
+									<a href="#" class="button">Learn More</a>
+								</div>
+								<div class="col align-center">
+									<div class="image round fit">
+										<img src="images/pic05.jpg" alt="" />
+									</div>
+									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
+									<a href="#" class="button">Learn More</a>
+								</div>
+								<div class="col align-center">
+									<div class="image round fit">
+										<img src="images/pic04.jpg" alt="" />
+									</div>
+									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
+									<a href="#" class="button">Learn More</a>
+								</div>
+							</div>
+						</div>
+					</section>
 
-</div>
+			</div>
 
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="copyright">
+					<h3>Follow Us</h3>
+						<ul class="icons">
+							<li><a href="https://twitter.com/gsc1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/Glasgowsciencecentre" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/glasgowsciencecentre/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://youtube.com/GlasgowScienceCentre1" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
+						</ul>
+						<p>JP Morgan Code For Good 2019</p>
+				</div>
+			</footer>
 
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
+	</body>
 </html>
