--- a/Webpage/landing.html
+++ b/Webpage/landing.html
@@ -5,13 +5,18 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="drop_hover.css">
 		<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/ppDcT3V.png"/>
+
+
+
 	</head>
 	<body>
 
+
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="landing.html">Home</a></div>
+				<div class="logo"><a href="landing.html"><img src="GSC_FULL-COLOUR.png" style="width:22%;float:left;"></a></div>
 			</header>
 
 		<!-- Banner -->
@@ -21,7 +26,7 @@
 						<h1>Glasgow Science Centre</h1>
 						<p>Aiming to make science accessible to everyone.</p>
 					</header>
-					<a href="#main" class="button big scrolly">I have a visual impairment</a>
+					<a href="#main" class="button big scrolly">Plan your visit.</a>
 				</div>
 			</section>
 
@@ -40,9 +45,35 @@
 									</div>
 									<div class="col col2">
 										<h3>Recommended Route</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-										<iframe src="https://www.w3schools.com"></iframe>
+										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your route through the centre to your needs. </p>
+
+
+
+										<!--<div align="center" style="float:center;text-align:center;">-->
+										<div class="dropdown">
+
+										  <button class="dropbtn" style="width:200%;">Adapt for</button>
+
+
+										  <div class="dropdown-content">
+										    <a class="dropdown-item" id="visual">Visual impairment</a>
+										    <a class="dropdown-item" id="hearing">Hearing impairment</a>
+										    <a class="dropdown-item" id="physical">Physical impairment</a>
+										    <a class="dropdown-item" id="autism">Autism</a>
+										    <a class="dropdown-item" id="epilepsy">Epilepsy</a>
+										  </div>
+										</div>
+										<!--
+										</div>-->
+
+
+										<br>
+										<br>
+										<br>
+
+
+
+										<iframe src=""></iframe>
 									</div>
 								</div>
 						</div>
