--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -73,7 +73,7 @@
 
 
 
-										<iframe src=""></iframe>
+										
 									</div>
 								</div>
 						</div>
@@ -81,7 +81,7 @@
 
 				<!-- Section -->
 					<section class="wrapper style2">
-						<div class="inner">
+						<!-- <div class="inner">
 							<div class="flex flex-2">
 								<div class="col col2">
 									<h3>Suspendisse quis massa vel justo</h3>
@@ -94,7 +94,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
+						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
 					</section>
 
 			</div>
