link back to home

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -8,15 +8,12 @@
 		<link rel="stylesheet" href="drop_hover.css">
 		<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/ppDcT3V.png"/>
 
-
-
 	</head>
 	<body>
 
-
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="landing.html"><img src="GSC_FULL-COLOUR.png" style="width:22%;float:left;"></a></div>
+				<div class="logo"><a href="home.html"><img src="GSC_FULL-COLOUR.png" style="width:22%;float:left;"></a></div>
 			</header>
 
 		<!-- Banner -->
