--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -42,7 +42,7 @@
 									</div>
 									<div class="col col2">
 										<h3>Recommended Route</h3>
-										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your route through the centre to your needs. </p>
+										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your visit to your needs. </p>
 
 
 
