--- a/routePlanning/test.html
+++ b/routePlanning/test.html
@@ -10,5 +10,8 @@ function getDistance(objA,objB){
     return Math.sqrt(Math.pow(objA.x - objB.x,2) + Math.pow(objA.y - objB.y));
 }
 document.write(GlasgowTower.tag);
+
+var json = "[{\"name\":\"Glasgow Tower\"},{\"name\":\"The Egg\"},{\"name\":\"Workshop area\"},{\"name\":\"Live Lab\"},{\"name\":\"Ticket Desk\"}]";
+
 </script>
 </html>
