--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -81,13 +81,12 @@
 						<div class="inner">
 							<div class="flex flex-2">
 								<div class="col col2">
-									<h3>Suspendisse quis massa vel justo</h3>
-									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+									<h3>Devices</h3>
+									<p>Insert cloud stuff here.</p>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<a class="link"><img src="images/pic03.jpg" alt="" /></a>
 									</div>
 								</div>
 							</div>
