--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -43,7 +43,7 @@
 									<div class="col col2">
 										<h3>Recommended Route</h3>
 										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your visit to your needs. </p>
-										<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
+
 										<!--<div align="center" style="float:center;text-align:center;">-->
 										<div class="dropdown">
 
@@ -88,9 +88,34 @@
 								</div>
 							</div>
 						</div> -->
+						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
 					</section>
 
 			</div>
+
+			<!--Section-->
+			<!-- Section -->
+				<section class="wrapper style1">
+					<div class="inner">
+						<!-- 2 Columns -->
+							<div class="flex flex-2">
+								<div class="col col1">
+									<div class="image round fit">
+										<a class="link"><img src="images/pic01.jpg" alt="" /></a>
+									</div>
+								</div>
+								<div class="col col2">
+									<h3>Devices</h3>
+									<p>Insert cloud stuff here.</p>
+
+									<br>
+									<br>
+									<br>
+
+								</div>
+							</div>
+					</div>
+				</section>
 
 		<!-- Footer -->
 			<footer id="footer">
