update new test case

--- a/routePlanning/test.html
+++ b/routePlanning/test.html
@@ -13,5 +13,8 @@ document.write(GlasgowTower.tag);
 
 var json = "[{\"name\":\"Glasgow Tower\"},{\"name\":\"The Egg\"},{\"name\":\"Workshop area\"},{\"name\":\"Live Lab\"},{\"name\":\"Ticket Desk\"}]";
 
+var objA = [{'name': 'Auditorium'}, {'name': 'Glasgow Tower'}, {'name': 'The Lab'}, {'name': 'The Planetarium'}];
+var objB = [{'name': 'Auditorium'}, {'name': 'The Egg'},{'name': 'Ticket Desk'}]
+var objC = [{'name': 'Live Lab'}, {'name': 'My WOW LIVE! Studio'},{'name': 'Live Lab'},{'name': 'Science Show Theater'}]
 </script>
 </html>
