--- a/routePlanning/map.html
+++ b/routePlanning/map.html
@@ -38,6 +38,13 @@
         border-radius: 10px;
         background-color: white;
     }
+
+    .line {
+        position: fixed;
+        transform-origin: 0 50%;
+        background: black;
+        height: 1px;
+    }
 </style>
 
 <script>
@@ -46,14 +53,18 @@
         ? (window.outerWidth - 1850) / 2
         : ($(window).width() - 1850) / 2;
 
-    MAPNODES.forEach(node => addNode(node));
+    visualInit();
 
     $('#map').css('margin-left', leftmargin+'px');
-
     $('#map').on('click', function() {
         clickX = event.pageX - this.offsetLeft;
         clickY = event.pageY - this.offsetTop;
         console.log(`(${clickX}, ${clickY})`);
+    });
+
+    $('.node').click(function() {
+        console.log($(this).attr('id'));
+        linkNodes([$(this).attr('id')]);
     });
 </script>
 
