Adding and modifying buttons

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -45,9 +45,9 @@
 										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your visit to your needs. </p>
 
 										<!--<div align="center" style="float:center;text-align:center;">-->
-										<div class="dropdown">
+											<div class="dropdown">
 
-										  <button class="dropbtn" style="width:400%;">Adapt for</button>
+										  <button class="dropbtn" style="width:400%;">Adapt for:</button>
 
 
 										  <div class="dropdown-content">
@@ -55,7 +55,7 @@
 										    <a class="dropdown-item" id="hearing">Hearing impairment</a>
 										    <a class="dropdown-item" id="physical">Physical impairment</a>
 										    <a class="dropdown-item" id="autism">Autism</a>
-										  </div>
+											</div>
 										</div>
 										<!--
 										</div>-->
@@ -94,8 +94,6 @@
 						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
 					</section>
 
-			</div>
-
 			<!--Section-->
 			<!-- Section -->
 				<section class="wrapper style1">
@@ -109,7 +107,10 @@
 								</div>
 								<div class="col col2">
 									<h3>Devices</h3>
-									<p>Insert cloud stuff here.</p>
+									<p>Book your device in advance.</p>
+									<div class="btn-lg">
+										<a href="example.html" class="button big scrolly">Book</a>
+									</div>
 
 									<br>
 									<br>
