--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -94,6 +94,8 @@
 						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
 					</section>
 
+				</div>
+
 			<!--Section-->
 			<!-- Section -->
 				<section class="wrapper style1">
