--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="drop_hover.css">
 		<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/ppDcT3V.png"/>
 
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> 
+
 	</head>
 	<body>
 
