--- a/routePlanning/map.html
+++ b/routePlanning/map.html
@@ -42,8 +42,8 @@
     .line {
         position: fixed;
         transform-origin: 0 50%;
-        background: black;
-        height: 1px;
+        background: red;
+        height: 2px;
     }
 </style>
 
