renaming classes for consistensy

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -13,7 +13,7 @@
 
 		    $(function() {
 		        $('#abilityselector').change(function(){
-		            $('.colors').hide();
+		            $('.ab').hide();
 		            $('#' + $(this).val()).show();
 		        });
 		    });
@@ -175,10 +175,10 @@
 					<section class="wrapper style2">
 
 
-						<div id="1" class="colors" style="display:none"> red... </div>
-						<div id="2" class="colors" style="display:none"> yellow.. </div>
-						<div id="3" class="colors" style="display:none"> blue.. </div>
-						<div id="4" class="colors" style="display:none"> blue.. </div>
+						<div id="1" class="ab" style="display:none"> red... </div>
+						<div id="2" class="ab" style="display:none"> yellow.. </div>
+						<div id="3" class="ab" style="display:none"> blue.. </div>
+						<div id="4" class="ab" style="display:none"> blue.. </div>
 
 
 
