adding routes for autism and physical

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -172,18 +172,7 @@
 						</div>
 					</section>
 
-					<section class="wrapper style2">
 
-
-						<div id="1" class="ab" style="display:none"> red... </div>
-						<div id="2" class="ab" style="display:none"> yellow.. </div>
-						<div id="3" class="ab" style="display:none"> blue.. </div>
-						<div id="4" class="ab" style="display:none"> blue.. </div>
-
-
-
-
-					</section>
 
 
 				<!-- Section -->
@@ -203,6 +192,312 @@
 							</div>
 						</div> -->
 						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
+
+
+
+					</section>
+
+					<section class="wrapper style2">
+
+
+						<div id="1" class="ab" style="display:none">
+						</div>
+						<div id="2" class="ab" style="display:none"> yellow.. </div>
+
+
+						<!-- Physical impairment -->
+						<div id="3" class="ab" style="display:none">
+
+									<div class="inner">
+										<div class="flex flex-2">
+											<div class="col col2">
+												<h3>Physical impairment</h3>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+												<h3> Ground floor </h3>
+												<h4>1. Go to the Ticket Desk to get your ticket.</h4>
+												<p>Wheelchairs are available from the Ticket Desk</p>
+												<p>Please ask a member of GSC staff if you require a manual wheelchair for the duration of your visit to the Centre</p>
+												<p>ase note this is available on a first come first serve basis </p>
+
+
+
+												<h4>2. Take the lift up to Floor 1.</h4>
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 1 </h3>
+
+												<h4>3.	Visit the Planetarium</h4>
+
+												<h4>4.	Walk through The Hive area surrounding the Science Show Theatre, down to The Big Explorer area.</h4>
+
+												<h4>5.	Take the lift up to Floor 2</h4>
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 2 </h3>
+
+												<h4>6.	Walk through the Nuclear Energy area, which involves a series of activities and displays on nuclear energy, including a chain reaction demonstrator</h4>
+
+												<h4>7.	Visit the Fundamentals Wall which contains a series of displays containing information about various forms of power</h4>
+
+												<h4>8.	Visit the Hand Crank Scalextric, a full size Scalextric racetrack where you can power up to 4 slot cars by turning hand crank generators positioned around the outside of the track</h4>
+
+												<h4>9.	Take the lift up to Floor 3</h4>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 3 </h3>
+
+												<h4> 10.	View and record images of your skin with the Bendy Microscope </h4>
+
+												<h4> 11.	Explore the inside of three humans with Virtual Autopsy </h4>
+
+												<h4> 12.	Compete with a buddy to find out who can be the most relaxed at the ‘Whose Brain Is More Relaxed?’ exhibit </h4>
+
+												<h4> 13.  Take the lift back down to Floor 1 </h4>
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Ground Floor</h3>
+
+												<h4> 14.	Visit the shop</h4>
+
+												<br>
+												<br>
+												<br>
+
+
+												<p style="font-size:200%;"><i> We hope that you enjoyed your visit and that we will see you again soon!</i> </p>
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+
+
+
+
+									</div>
+
+
+
+
+						 </div>
+
+
+
+						<!--Autism -->
+						<div id="4" class="ab" style="display:none">
+
+									<div class="inner">
+										<div class="flex flex-2">
+											<div class="col col2">
+												<h3>Autism route</h3>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+												<h3> Ground floor </h3>
+												<h4>1. Go to the Ticket Desk to get your ticket.</h4>
+												<p>Visitors with autism do not have to queue during busy periods. Please speak to a member of staff on arrival and they will be happy to assist you.
+												</p>
+
+												<h4>2. Take the lift up to Floor 1.</h4>
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 1 </h3>
+
+												<h4>3.	Walk through The Hive area surrounding the Science Show Theatre</h4>
+
+												<h4>4.	Walk down by the windows making sure to take the amazing views of Glasgow, towards The Big Explorer area.</h4>
+
+												<h4>5.	Take the lift up to Floor 2</h4>
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 2 </h3>
+
+												<h4>6.	Measure your carbon footprint using the interactive display Energy Footprint quiz</h4>
+
+												<h4>7.	Discover the power of water at the Hydro Wall and Pelton Water Wheel</h4>
+
+												<h4>8.	See how you can turn kinetic energy into electrical energy by having a race at the full size Scalextric racetrack.</h4>
+
+												<h4>9.	Take the lift up to Floor 3</h4>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 3 </h3>
+
+												<h4> 10.	View and record images of your skin with the Bendy Microscope </h4>
+
+												<h4> 11.	Explore the inside of three humans with Virtual Autopsy </h4>
+
+												<h4> 12.	Find out ‘How Fast Can You Sprint?’ at the sprint track </h4>
+
+												<h4> 13.  Take the lift back down to Floor 1 </h4>
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Ground Floor</h3>
+
+												<h4> 14.	Visit the shop</h4>
+
+												<br>
+												<br>
+												<br>
+
+
+												<p style="font-size:200%;"><i> We hope that you enjoyed your visit and that we will see you again soon!</i> </p>
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+
+
+
+
+									</div>
+
+
+
+
+						 </div>
+
 
 
 
